<resources>
    <string name="app_name">common</string>
    <string name="str_home">首页</string>
    <string name="str_market">行情</string>
    <string name="str_c2c">C2C</string>
    <string name="str_exchange">交易</string>
    <string name="str_mine">我的</string>
    <string name="str_personal_center_title">个人中心</string>
    <string name="str_login_and_regist">登录/注册</string>
    <string name="str_personal_recharge_coin">充币</string>
    <string name="str_my_asset">我的资产</string>
    <string name="str_my_orders">我的订单</string>
    <string name="str_certification">实名认证</string>
    <string name="str_invite_commission">邀请返佣</string>
    <string name="str_security_center">安全中心</string>
    <string name="str_withdraw_addr">提币地址</string>
    <string name="str_messages_center">消息中心</string>
    <string name="str_help_center">帮助中心</string>
    <string name="str_personal_setting">设置</string>
    <string name="str_withdraw_coins">提币</string>
    <string name="str_transfer_coins">划转</string>
    <string name="str_home_ad">关于海特币交易所移动端APP上线通知</string>
    <string name="str_24h">名称/24H成交额</string>
    <string name="str_24h_price">最新价</string>
    <string name="str_24h_inpreaseordown">24H涨跌幅</string>
    <string name="str_24h_2824">24H 成交额:2824万元</string>
    <string name="str_customer_gui">币币交易新手攻略</string>
    <string name="str_a_month">1月前</string>
    <string name="str_demo_time">2018-10-11 18:00:00</string>
    <string name="str_simpleprice">单价</string>
    <string name="str_two_save_dimension">保存二维码</string>
    <string name="str_copy_address">复制地址</string>
    <string name="str_id_authentication">身份证认证</string>
    <string name="str_had_authentication">已认证</string>
    <string name="str_nationality">国籍</string>
    <string name="str_users_name">用户名称</string>
    <string name="str_name">姓名</string>
    <string name="str_id_card_num">身份证号码</string>
    <string name="str_base_data">基本资料</string>
    <string name="str_certificate_msg">证件信息</string>
    <string name="str_certificate_frontal">证件正面照</string>
    <string name="str_certificate_opposite">证件反面照</string>
    <string name="str_hold_certificate">手持身份证照</string>
    <string name="str_personal_info">个人信息</string>
    <string name="str_market_title">行情</string>
    <string name="str_market_name">名称</string>
    <string name="str_market_newprice">最新价</string>
    <string name="str_market_updownpercent">涨跌幅</string>
    <string name="add_toadded">+ 添加自选</string>
    <string name="day_trade_total">24H成交额：</string>
    <string name="search_cointype">搜索币种：</string>
    <string name="btn_add_optional">+添加</string>
    <string name="str_head_pulldown"></string>
    <string name="str_header_refreshing"></string>
    <string name="str_head_release"></string>
    <string name="str_header_finish"></string>
    <string name="str_header_failed"></string>
    <string name="str_header_all_finish"></string>
    <string name="footer_loading"></string>
    <string name="footer_finish"></string>
    <string name="str_title">标题</string>
    <string name="str_real_name_article">1、认证信息一经填写，不可修改，请务必如实填写。 \n2、初级认证，在C2C交易区进行小额交易，小额的提币、充币需要完成初级认证。 \n3、在C2C交易区进行大额交易，发布广告，更多额度的提币、充币。更多的玩法需要完成高级认证。 \n4、当您在交易所进行C2C交易、币币交易或者提币、充币操作时，为了确保交易双方身份的真实有效及交易本身的安全性，需要您完成相应级别的实名认证。 \n5、实名认证的登记时逐一认证的，后面等级的认证是在前一等级的基础上进行认证的。</string>
    <string name="str_kindly_reminder">温馨提示：</string>
    <string name="str_1_gsg_2_10_30_3_20usdt_4_5">1、请勿向上述地址充值非GSG资产，否则将不可找回。 \n2、您的充值至上述地址之后，需要整个网络节点的确认，10次网络确认后到账，30次网络确认后提币。 \n3、最小充值金额：20USDT,小于最小充值金额将不会上涨且无法退回。 \n4、您的充值地址不会经常改变。可以重复充值；如有更改我们会通过网站公告或邮箱通知您。 \n5、请务必确认电脑及浏览器安全，防止信息被篡改或泄露。</string>
    <string name="str_not_identify">未认证</string>
    <string name="str_China">中国</string>
    <string name="str_identify">认证</string>
    <string name="str_tradetype">交易方式</string>
    <string name="str_paytype_value">微信支付</string>
    <string name="str_please_write_down_your_real_name">请如实填写您真实姓名，认证后不可修改</string>
    <string name="str_please_write_down_your_real_id_card_number">请如实填写您的身份证号，认证后不可修改</string>
    <string name="str_price">限额：----- - -----</string>
    <string name="str_buy">买入</string>
    <string name="str_tip_buy">买入提示</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="str_trade_amount">交易数量</string>
    <string name="str_rmb">交易金额</string>
    <string name="str_payee">收款人</string>
    <string name="str_wx_account">微信账号</string>
    <string name="str_pay_scancode">收款二维码</string>
    <string name="str_junior_identify">初级认证</string>
    <string name="str_real_name">真实姓名</string>
    <string name="str_jpg_jpeg_png_3m">以下材料需要用jpg/jpeg/png格式上传，上传时注意保证照片清晰，亮度均匀，边角完整，无杂物，大小不超过3M.</string>
    <string name="str_medium_identify">中级认证</string>
    <string name="str_c2c_buy">买入</string>
    <string name="str_c2c_buyup">买入UP</string>
    <string name="str_c2c_order_code">订单编号</string>
    <string name="str_simple_price">单价</string>
    <string name="str_c2c_buy_people">买家</string>
    <string name="str_c2c_buy_tip_warning">如果已经向对方付款，请务必点击“我已付款”按钮，否则可能造成资金损失。</string>
    <string name="str_c2c_cancelorder">取消订单</string>
    <string name="exchange_buy">买入</string>
    <string name="exchange_sale">卖出</string>
    <string name="exchange_kline_picture">K线图</string>
    <string name="exchange_onsale_price">市价</string>
    <string name="exchange_limit_price">限价</string>
    <string name="str_upload_photo">上传照片</string>
    <string name="str_can_see_clear">能看清证件号、姓名、头像</string>
    <string name="str_check_example">查看示例</string>
    <string name="str_certificate_need_in_deadline">证件需要在有效期内</string>
    <string name="str_hold_certificate_notice">手持证件照包括手持真贱和手写字条照片，字条内容为“HiTcion+当日日期”。确保证件信息清晰可见，执照人五官可见。</string>
    <string name="str_submit_examin_and_verify">提交审核</string>
    <string name="str_mobile_phone">手机</string>
    <string name="str_e_mail">邮箱</string>
    <string name="str_google_check">谷歌身份验证器</string>
    <string name="str_login_password">登录密码</string>
    <string name="str_capital_password">资金密码</string>
    <string name="str_fingerprint_password">指纹密码</string>
    <string name="str_please_write_down_address">请填写提币地址</string>
    <string name="str_with_draw_address">提币地址</string>
    <string name="str_please_select_type_of_coin">请选择币种</string>
    <string name="str_type_of_coin">提币币种</string>
    <string name="str_all">全部</string>
    <string name="str_poundage">手续费（UP）</string>
    <string name="str_transfer_count">到账数量（UP）</string>
    <string name="str_withdraw_remider">1、最小提币数量为：80UP \n2、为保障资金安全，当你的账户安全策略变更，密码都给，我们会对提币进行人工审核，请耐心等待工作人员短话或邮件联系。\n3、请务必确认电脑及浏览器安全，防止信息被篡改或泄露。</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_user_setting">设置</string>
    <string name="str_connect_us">联系我们</string>
    <string name="str_software_update">软件更新</string>
    <string name="str_service_protocol">服务协议</string>
    <string name="str_0">0</string>
    <string name="str_50percent">50%</string>
    <string name="str_100percent">100%</string>
    <string name="str_buy_in">买入GSG</string>
    <string name="str_pankou">盘口</string>
    <string name="str_exchange_price">价格</string>
    <string name="str_exchagne_amout">数量</string>
    <string name="exchange_all">全部</string>
    <string name="str_indelegation">委托中</string>
    <string name="str_usdt_price">单价（USDT）</string>
    <string name="str_exchagne_completed">已成交</string>
    <string name="str_cancel">撤销</string>
    <string name="str_offprice">以当前最优价格买入</string>
    <string name="str_exchange_title">GSG/USDT</string>
    <string name="str_buy_saleout">卖出GSG</string>
    <string name="str_buy_saleout_up">卖出UP</string>
    <string name="str_transfer_asset">资产划转</string>
    <string name="str_do_not_need_feed">交易所内账户之间资产划转不收取任何手续费</string>
    <string name="str_type_of_coins">币种</string>
    <string name="str_from">从</string>
    <string name="str_fb_transaction_account_balance">(法币交易账户余额为：</string>
    <string name="str_fb_transaction_account">法币交易账户</string>
    <string name="str_transfer_to">划转到</string>
    <string name="str_bb_transaction_account">币币交易账户</string>
    <string name="str_bb_transaction_account_balance">(币币交易账户余额为：</string>
    <string name="str_sell_all">全部出售</string>
    <string name="str_please_input_the_num_of_how_many_you_want_to_transfer">请输入您要划转的数量</string>
    <string name="str_transfer_immediately">立即划转</string>
    <string name="str_register">注册</string>
    <string name="str_cancel_exchange">取消</string>
    <string name="str_next_step">下一步</string>
    <string name="str_please_input_your_phone">请输入您的手机号码</string>
    <string name="str_please_input_identify_code">请输入验证码</string>
    <string name="str_get_identify_code">获取验证码</string>
    <string name="str_register_by_email">邮箱注册</string>
    <string name="str_have_account">已有账号，</string>
    <string name="str_to_login">去登陆</string>
    <string name="str_please_input_your_email">请输入您的邮箱地址</string>
    <string name="str_please_identify_code_from_email">请输入邮箱验证码</string>
    <string name="str_register_by_phone">手机号注册</string>
    <string name="str_please_input_password">请输入密码</string>
    <string name="str_password_make_of_num_letter">8-20位数字、字母、字符组成</string>
    <string name="str_please_input_password_again">请再次输入密码</string>
    <string name="str_click_register_means">点击注册即表示</string>
    <string name="str_user_protocol">《海特币交易所用户协议》</string>
    <string name="str_forget_pwd">忘记密码?</string>
    <string name="str_login">登 录</string>
    <string name="str_please_input_your_login_pwd">请输入您的登录密码</string>
    <string name="str_coincharging">订单中心</string>
    <string name="str_order_center">充   币</string>
    <string name="str_addoptional">添加自选</string>
    <string name="str_handicapchange">横版盘口</string>
    <string name="str_reset_pwd">重置密码</string>
    <string name="str_reset">重 置</string>
    <string name="str_c2c_bank_account">银行卡号</string>
    <string name="str_c2c_bank_account1">银行卡</string>
    <string name="str_c2c_contact">联系对方</string>
    <string name="str_c2c_create_bank">开户银行</string>
    <string name="str_bank_sub">开户支行</string>
    <string name="str_default">-----</string>
    <string name="str_c2c_please_pay">请付款</string>
    <string name="str_c2c_buy_warning_tip">温馨提示</string>
    <string name="str_c2c_buy_warinig_tip_value">1、您的汇款将直接进入对方账户，交易过程中数字资产将有平台托管保护。\n 2、请在规定的时间内完成付款，并务必点击“我已付款”，对方确认收款后，系统会将数字资产划转到您的账户。\n 3、如果当日取消订单次数达到3次，将会被限制买入功能。</string>
    <string name="str_c2c_sell_warning_tip">"1、您所出售的数字资产，已交由平台托管冻结。请在确认手袋对方付款后，点击“放行”数字资产。\n 2、请不要相信任何催促放币的理由，确认收到款项后再放行数字资产，避免造成财产损失。\n 3、在收到到账信息后，请务必登录收款账户确认是否入账，避免因收到诈骗短信错误放行数字资产。</string>
    <string name="str_kline_amount">24H成交量</string>
    <string name="str_exchange_coinprice">3210.6548</string>
    <string name="str_exchange_buy">买</string>
    <string name="str_exchange_sale">卖</string>
    <string name="str_exchange_count">数量</string>
    <string name="str_exchange_headprice">价格</string>
    <string name="str_exchange_close">关闭</string>
    <string name="str_exchange_entrustsum">委托总额（USDT）</string>
    <string name="str_exchange_usdtprice">价格（USDT）</string>
    <string name="str_exchange_pricecompleted">已成交(USDT)</string>
    <string name="str_exchange_uncompleted">未成交（USDT）</string>
    <string name="str_exchange_poundage">手续费（USDT）</string>
    <string name="str_exchange_orderstate">订单状态</string>
    <string name="str_exchange_entrusting">委托中</string>
    <string name="str_exchange_means">交易形式</string>
    <string name="str_market_exchange">市场交易</string>
    <string name="str_order_number">订单编号</string>
    <string name="str_kline_total_issue_amout">发行总量</string>
    <string name="str_kline_total_issue_time">发行时间</string>
    <string name="str_kline_total_circulation">流通总量</string>
    <string name="str_kline_preparatory_price">筹备价格</string>
    <string name="str_kline_white_paper">白皮书</string>
    <string name="str_kline_offical_web">官网</string>
    <string name="str_kline_block_query">区块查询</string>
    <string name="str_kline_brief_indroduction">简介</string>
</resources>