<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/dp16"
    android:layout_marginRight="@dimen/dp15"
    android:layout_width="match_parent"
    android:background="@color/color_181b2c"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:textColor="@color/color_c3cdff"
        android:gravity="left|center_vertical"
        android:text="GSG（Golden Storn Golden）"
        />
    <View style="@style/gray_line_343b60"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_total_issue_time"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="2018-11-17"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14"
            />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_total_issue_amout"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="6541242.89万"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14"
            />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_total_circulation"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="345615.89万"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14"
            />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_preparatory_price"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />

        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="暂无"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14" />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_white_paper"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="http://gsg.org/gsgcion.pdf"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14"
            />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_offical_web"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="https://www.gswssue.com/"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14"
            />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/dp50">
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/str_kline_block_query"
            android:textColor="@color/color_6470a9"
            android:textSize="@dimen/dp14"
            />
        <com.foxexchange.common.widgets.CustomerTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="https://blockchain.info/"
            android:textColor="@color/color_c3cdff"
            android:textSize="@dimen/dp14"
            />
    </RelativeLayout>
    <View style="@style/gray_line_343b60"/>

    <com.foxexchange.common.widgets.CustomerTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp28"
        android:text="@string/str_kline_brief_indroduction"
        android:textColor="@color/color_c3cdff"
        android:textSize="@dimen/dp21"
        />

    <TextView
        android:layout_marginTop="@dimen/dp41"
        android:lineSpacingMultiplier="1.5"
        android:layout_width="match_parent"
        android:singleLine="false"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp14"
        android:textColor="@color/color_c3cdff"
        android:text="GSS是海特币交易所为全球用户发行的居于以太坊ERC20基础上的新型数字货币。GSG依靠强大的算法算力，以及强大的P2P超级节点来记录所有的交易行为，并且所有的交易行为都是可溯源且不可篡改，确保来数字货币交易的安全性、便捷性以及匿名性。GSG区块链数字资产经过3年多的发展已成为全球众多用户喜爱的数字资产。"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp68"/>
</LinearLayout>
</RelativeLayout>